# sportolio-codex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  app.md  app_goals.md  pyrightconfig.json  ralph.md  ralph.sh
backend/: README.md  alembic.ini  pyproject.toml
backend/docs/: bootstrap-architecture.md  domain-contexts-and-events.md  migrations.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_sprt26_fatigue_snapshots.py
backend/scripts/: migration_lint.py
backend/src/sportolo/: __init__.py  app_factory.py  config.py  main.py
backend/tests/contract/: test_axis_scoring_contract.py  test_domain_event_contracts.py  test_exercise_catalog_contract.py  test_exercise_zone_mapping_contract.py  test_goal_priority_contract.py  test_muscle_usage_contract.py  test_today_accumulation_contract.py  test_wahoo_integration_contract.py
backend/tests/integration/: test_app_bootstrap_integration.py  test_background_job_framework_integration.py  test_exercise_catalog_search_integration.py  test_fatigue_schema_migration.py  test_goal_priority_recalculation_integration.py  test_migration_linting.py  test_migration_pipeline.py  test_wahoo_control_integration.py
backend/tests/unit/: test_axis_scoring_service.py  test_background_job_queue_service.py  test_exercise_catalog_service.py  test_exercise_zone_mapping_service.py  test_fatigue_snapshot_repository.py  test_goal_priority_service.py  test_muscle_usage_service.py  test_today_accumulation_service.py  test_wahoo_control_service.py  test_wahoo_integration_service.py
clean_code/: .pre-commit-config.yaml  (+1 more)
(+186 files in other folders)
